<resources>
    <string name="app_name">Math Brain</string>
    <string name="utpal_barman_apps">UTPAL BARMAN APPS</string>
    <string name="version_code">2.0.1</string>
    <string name="play_now">Play Now</string>
    <string name="exit">Exit</string>
    <string name="logo">Logo</string>
    <string name="about">About</string>
    <string name="title_activity_main_game">Good Wishes</string>
    <string name="num1">num1</string>
    <string name="plus">+</string>
    <string name="num2">num2</string>
    <string name="sum1">sum1</string>
    <string name="sum2">sum2</string>
    <string name="sum3">sum3</string>
    <string name="playing_well">Playing Well!</string>
    <string name="_0">0</string>
    <string name="good_luck">Good Luck!</string>
    <string name="_0_points">0 Points</string>
    <string name="game_is_over">Game is Over!</string>
    <string name="play_again">Play Again</string>
    <string name="home">Home</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="version">Version</string>
    <string name="img_version">Version</string>
    <string name="how_to_contact">If you have any suggestion about this application, Please contact with me utpal2201@gmail.com</string>
    <string name="thanks">Thanks</string>
    <string name="developer_name">Developed by Utpal Barman</string>
    <string name="programmer">programmer</string>
    <string name="highest_score_0">Highest Score: 0</string>
    <string name="imageview_backscore">imageView_backScore</string>
    <string name="_100">100</string>
    <string name="_99">99</string>
</resources>
