<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version"
        android:id="@+id/textView_version_details"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version_code"
        android:id="@+id/version_code"
        android:layout_below="@+id/textView_version_details"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_margin="15dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView_version"
        android:layout_above="@+id/textView_version_details"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_version"
        android:background="@drawable/update"
        android:layout_marginBottom="25dp"
        android:onClick="clicked_update" />

</RelativeLayout>
