<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".SplashActivity"
    android:padding="30dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utpal_barman_apps"
        android:id="@+id/textView_utpal_barman"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="#ffeeff"
        android:textSize="18sp"
        android:layout_below="@+id/imageView_textLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView_flashLogo"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="@android:style/Widget.Holo.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="45dp"
        android:layout_above="@+id/imageView_flashLogo"
        android:layout_centerHorizontal="true"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_code"
        android:id="@+id/textView_versionCode"
        android:layout_centerHorizontal="true"
        android:textColor="#ffccff"
        android:textSize="20sp"
        android:typeface="monospace"
        android:layout_below="@+id/imageView_flashLogo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_textLogo"
        android:background="@drawable/textlogo"
        android:layout_below="@+id/textView_versionCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp" />

</RelativeLayout>
